--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -751,8 +751,8 @@
 			</a>
 		</div>
 		<div class="search-box navbar-top-search-box d-none d-lg-block" data-list='{"valueNames":["title"]}' style="width:25rem;">
-			<form class="position-relative" data-bs-toggle="search" data-bs-display="static">
-				<input class="form-control search-input fuzzy-search rounded-pill form-control-sm" type="search" placeholder="Search..." aria-label="Search"/>
+			<form class="position-relative" data-bs-toggle="search" data-bs-display="static" id="searchForm">
+				<input class="form-control search-input fuzzy-search rounded-pill form-control-sm" type="search" placeholder="Search..." id="searchInput" aria-label="Search"/>
 				<span class="fas fa-search search-box-icon"></span>
 			</form>
 			<div class="btn-close position-absolute end-0 top-50 translate-middle cursor-pointer shadow-none" data-bs-dismiss="search">
@@ -1269,4 +1269,13 @@
 	if (navbarVerticalStyle === 'darker') {
 		navbarVertical.setAttribute('data-navbar-appearance', 'darker');
 	}
+</script>
+
+
+<script>
+	document.getElementById('searchForm').addEventListener('submit', function(event) {
+		event.preventDefault(); // Prevent the default form submission
+		const searchText = document.getElementById('searchInput').value;
+		window.location.href = `/explore/${encodeURIComponent(searchText)}`;
+	});
 </script>
