search page and search bar

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -484,7 +484,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div
 			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link lh-1 pe-0" id="navbarDropdownUser" href="https://prium.github.io/phoenix/v1.21.0/#!" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false">
